<resources>
    <string name="app_name">Git Demo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="go">GO</string>
    <string name="created_at">Created At</string>
    <string name="closed_at">Closed At</string>
    <string name="user_name">User Name : %s</string>
    <string name="showing_pr_for_repo">Showing PR for repo : %s</string>
    <string name="type_owner_repo">type \'owner/repo\'</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="owner_repo_toast_error">Please enter \'owner/repo\' in search box</string>
</resources>